# gameap-starter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  appveyor.yml  main.cpp  proc.cpp  proc.h
vc2010/: ReadMe.txt  gameap-starter.sln  gameap-starter.vcxproj  gameap-starter.vcxproj.filters
